Thu Mar 16 13:15:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSText.m: Fixes by Fred Kiefer for rich text display.
	* Source/NSTextView.m: ditto
	* Source/NSFontManager.m: bugfixes - check for nil fonts.

Wed Mar 15 02:41:04 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSUtil.m: Removed file; it was duplicating 
	[NSString -sizeWithAttributes:].
	* Source/GSUtil.h: Idem.
	* Source/GNUmakefile: Idem.
	* Source/NSButtonCell.m ([-drawInteriorWithFrame:inView:]): Invoke
	[NSString -sizeWithAttributes:] instead of
	GSUtil_sizeOfMultilineStringWithFont(); ([-cellSize]): Idem.
	* Source/NSCell.m ([-cellSize]): Idem; updated for the change 
	so that the @"" string gets simply the height of the font.
	([-_drawText:title:cellFrame]): Idem, plus rewritten vertical
	centering of text.

	* Source/NSCell.m ([-setObjectValue:]): Temporary implementation 
	working only with strings, images, and numbers.  This is 
	needed by the forthcoming NSTableView.
	
2000-03-11  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSText.h: Add missing methods.

	* Source/NSCachedImageRep.m: Remove ImageCompositing dwrite and
	centralize in backend (Now use GraphicCompositing to turn on 
	alpha drawing/compositing).

	* Source/NSSlider.m ([NSSlider -initWithFrame:]): set continuous
	as specified in OpenStep docs.

	* Source/NSWindow.m (-center): Remove modification already
	taken care of in backend.

Sat Mar 11 06:32:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSStringDrawing.m: Fix error in handling extent of
	paragraph styles.

Sat Mar 11 05:54:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSPanel.m: Completely reformatted and added some fixes for
	errors in positioning/sizing the panel.

Fri Mar 10 17:42:00 2000  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSWindow.m: Reverted last change to NSWindow as they left
	it unable to compile and the intended modification to the center